[project]
name = "semantic-draw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.36.0",
    "einops>=0.8.1",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
